problem with windows scrollbar partially solved

--- a/client/css/presentation.css
+++ b/client/css/presentation.css
@@ -26,7 +26,7 @@
     background: #fafafa;
 
     overflow-x: hidden;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 .exitButton {
